--- a/questions/04.tex
+++ b/questions/04.tex
@@ -2,8 +2,8 @@
 
 Which of the following circuits is/are impossible (violates Kirchhoff's laws)?
 
-\begin{cctikz}[x=2cm,y=2cm] 
-\draw   (0,0)
+\begin{cctikz}[x=2cm,y=2cm]
+        \draw   (0,0)
         -- ++(right:0.5)
         node[circ]{}
         -- ++(up:0.25)
@@ -24,13 +24,13 @@ Which of the following circuits is/are impossible (violates Kirchhoff's laws)?
         to[I, l=5<\A>] ++(right:1)
         to[I, l=2<\A>] ++(right:1)
         node[right=0.5cm]{Circuit 3}
-;
+        ;
 \end{cctikz}
 
 \begin{oneparchoices}[keeplast]
-\CorrectChoice Circuit 1
-\choice Circuit 2
-\choice Circuit 3
-\choice Circuit 1 \& 3
-\choice None of the above
+        \correctchoice Circuit 1
+        \choice Circuit 2
+        \choice Circuit 3
+        \choice Circuit 1 \& 3
+        \choice None of the above
 \end{oneparchoices}
