add parameters for submission deadline and url

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,9 @@
 \def\assessment{Class Assignment 1}
 \def\duration{1 hour 20 minutes}
 \def\date{September 28, 2023} % can be set to \today by commenting
+% submission specific parameters
+% \def\deadline{November 07, 2023 by 11:59pm} % can be omitted by commenting
+% \def\formurl{https://forms.gle/5yw6CkdLebt1YH92A} % can be omitted by commenting
 % set related parameters
 \def\setbegin{A} % uppercase letters A to Z, AA, AB...
 \def\setend{J} % uppercase letters A to Z, AA, AB...
@@ -25,7 +28,9 @@
 
 % --------------------------------PACKAGES------------------------------------------
 \documentclass[addpoints, a4paper]{exam}
-\usepackage{anyfontsize, amssymb, amsmath, refcount}
+\usepackage{anyfontsize, amssymb, amsmath}
+\usepackage{qrcode, refcount}
+\usepackage[colorlinks=true,allcolors=.,urlcolor={magenta}]{hyperref}
 \usepackage[shortlabels]{enumitem}
 \usepackage[siunitx, american, RPvoltages]{circuitikz}
 \usepackage{pgfplots}
