update comment for clarity

--- a/main.tex
+++ b/main.tex
@@ -19,8 +19,8 @@
 \def\numpagesperset{0} % minimum number of pages per set
 % options for pdf generation
 \def\eachsetonsinglepaper{A3} % options: A3, A4, false. print each set in a single paper
-\def\showsetinheader{true} % show set in page headers
-\def\showsolutions{true} % show answers in the generated pdf
+\def\showsetinheader{true} % show/hide set in page headers
+\def\showsolutions{true} % show/hide answers in the generated pdf
 \def\shufflequestionorder{true}
 \def\shufflechoiceorder{true}
 \def\questionsintwocolumns{true}
