--- a/exam-format.tex
+++ b/exam-format.tex
@@ -1,7 +1,7 @@
 % typeset marks writing
 \def\marks#1{%
-        \ifthenelse{\equal{#1}{0} \or \equal{#1}{1} \or \equal{#1}{\half}}
-        {#1 mark}{#1 marks}%
+    \ifthenelse{\equal{#1}{0} \or \equal{#1}{1} \or \equal{#1}{\half}}
+    {#1 mark}{#1 marks}%
 }
 % marks instead of points
 \marksnotpoints
@@ -11,49 +11,61 @@
 \CorrectChoiceEmphasis{\color{red}\bfseries\boldmath}
 % use circled uppercase letters for choices
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
-                \node[shape=circle,draw,inner sep=2pt] (char) {#1};}}
+        \node[shape=circle,draw,inner sep=2pt] (char) {#1};}}
 \renewcommand{\choicelabel}{\circled{{\thechoice}}}
 % formatting of Question blocks
 \qformat{
-        \parbox[][24pt][t]{\dimexpr\columnwidth-3pt}{ % for creating space below
-                \Large\textbf{
-                        $\diamondsuit$
-                        Question \thesetquestion~of \numqinrange{\set}\;
-                        \textit{%
-                                \hfill%
-                                \ifthenelse{\equal{\thequestiontitle}{\thequestion}}%
-                                {}%
-                                {[\thequestiontitle]\;}%
-                                [\ifthenelse{\equal{\totalpoints}{0}}{%
-                                                \marks\totalbonuspoints\;(bonus)%
-                                        }{%
-                                                \marks\totalpoints%
-                                                \ifthenelse{\equal{\totalbonuspoints}{0}}
-                                                {}
-                                                {\,+\,\marks\totalbonuspoints\;(bonus)}%
-                                        }%
-                                ]%
-                        }%
-                }%
+    \parbox[][24pt][t]{\dimexpr\columnwidth-3pt}{ % for creating space below
+        \Large\textbf{
+            $\diamondsuit$
+            Question \thesetquestion~of \numqinrange{\set}\;
+            \textit{%
+                \hfill%
+                \ifthenelse{\equal{\thequestiontitle}{\thequestion}}%
+                {}%
+                {[\thequestiontitle]\;}%
+                [\ifthenelse{\equal{\totalpoints}{0}}{%
+                        \marks\totalbonuspoints\;(bonus)%
+                    }{%
+                        \marks\totalpoints%
+                        \ifthenelse{\equal{\totalbonuspoints}{0}}
+                        {}
+                        {\,+\,\marks\totalbonuspoints\;(bonus)}%
+                    }%
+                ]%
+            }%
         }%
+    }%
 }
 % formatting of Bonus Question blocks
 \bonusqformat{
-        \parbox[][24pt][t]{\dimexpr\columnwidth-3pt}{ % for creating space below
-                \Large\textbf{
-                        $\diamondsuit$
-                        Question \thesetquestion~of \numqinrange{\set}\;
-                        \textit{%
-                                \hfill%
-                                \ifthenelse{\equal{\thequestiontitle}{\thequestion}}
-                                {}
-                                {[\thequestiontitle]\;}
-                                [\marks\totalbonuspoints\;(bonus)]%
-                        }%
-                }%
+    \parbox[][24pt][t]{\dimexpr\columnwidth-3pt}{ % for creating space below
+        \Large\textbf{
+            $\diamondsuit$
+            Question \thesetquestion~of \numqinrange{\set}\;
+            \textit{%
+                \hfill%
+                \ifthenelse{\equal{\thequestiontitle}{\thequestion}}
+                {}
+                {[\thequestiontitle]\;}
+                [\marks\totalbonuspoints\;(bonus)]%
+            }%
         }%
+    }%
 }
 % formatting of subpart, subsubpart etc.
 \pointformat{\small\textbf{\textit{[\thepoints]}}}
 % formatting of bonussubpart, bonussubsubpart etc.
 \bonuspointformat{\small\textbf{\textit{[\thepoints]}}}
+
+\ifdefstring{\questionsintwocolumns}{true}{
+    \renewcommand{\questionshook}{%
+        \setlength{\leftmargin}{0pt}%
+        \setlength{\itemindent}{\dimexpr\labelwidth+\labelsep\relax}%
+    }
+    \renewcommand{\partshook}{%
+        \setlength{\leftmargin}{6pt}%
+        \setlength{\rightmargin}{6pt}%
+        \setlength{\itemindent}{\dimexpr\labelwidth+\labelsep\relax}%
+    }
+}{}
