--- a/instructions-omr.tex
+++ b/instructions-omr.tex
@@ -4,7 +4,7 @@
             \begin{itemize}[\checkmark,nosep,leftmargin=16pt]
                 \item No washroom breaks. Phones must be turned off. Using/carrying any notes during the exam is not allowed.
                       % \item At the end of the exam, both the \textbf{answer script} and the \textbf{question paper} must be returned to the invigilator.
-                \item All \textbf{\numqinrange{\set}~questions} are compulsory. Marks allotted for each question are mentioned beside each question.
+                \item All \textbf{\numqinrange{\set}~question(s)} are compulsory. Marks allotted for each question are mentioned beside each question.
                       \ifthenelse{\equal{\numbonuspoints}{0}}{}{\item Bonus questions are indicated as ``\textbf{\textit{(bonus)}}" along with allotted marks.}
                 \item Write your answers inside the indicated boxes (where applicable). If you run out of room, continue on the back page.
                 \item Symbols have their usual meanings.
