cute inductors by default

--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 \usepackage{qrcode, refcount}
 \usepackage[colorlinks=true,allcolors=.,urlcolor={magenta}]{hyperref}
 \usepackage[shortlabels]{enumitem}
-\usepackage[siunitx, american, RPvoltages]{circuitikz}
+\usepackage[siunitx, american, RPvoltages, cuteinductors]{circuitikz}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
 \usepackage[many]{tcolorbox}
